Fixed elements jumping around because of being initially empty

--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,6 @@ button {
 	cursor: pointer;
 }
 
-section {
-	display: inline-block;
-}
-
 #overlay {
 	display: none;
 	position: absolute;
